좌석 서비스 코드 리팩토링: 중복 제거 및 코드 간결화 유닛Test및 통합Test진행